--- a/Server/App.config
+++ b/Server/App.config
@@ -1,99 +1,91 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true"/>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider"
-             type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             serviceUri="" />
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider"
-             type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             serviceUri="" cacheTimeout="86400" />
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
       </providers>
     </roleManager>
   </system.web>
   <system.serviceModel>
-    <client />
+    <client/>
     <services>
 
       <service name="Server.Services.UserService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService"/>
           </baseAddresses>
         </host>
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IUserService">
           <identity>
-            <dns value="localhost" />
+            <dns value="localhost"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
 
       <service name="Server.Services.ItemService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService"/>
           </baseAddresses>
         </host>
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IItemService">
           <identity>
-            <dns value="localhost" />
+            <dns value="localhost"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
 
       <service name="Server.Services.CategoryService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService"/>
           </baseAddresses>
         </host>
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.ICategoryService">
           <identity>
-            <dns value="localhost" />
+            <dns value="localhost"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
 
       <service name="Server.Services.RatingService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService"/>
           </baseAddresses>
         </host>
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IRatingService">
           <identity>
-            <dns value="localhost" />
+            <dns value="localhost"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
 
     </services>
 
     <bindings>
       <wsHttpBinding>
-        <binding closeTimeout="10:00:00" openTimeout="10:00:00" receiveTimeout="10:00:00"
-          sendTimeout="10:00:00" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
-          messageEncoding="Text">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
-            maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        <binding closeTimeout="10:00:00" openTimeout="10:00:00" receiveTimeout="10:00:00" sendTimeout="10:00:00" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
         </binding>
       </wsHttpBinding>
     </bindings>
@@ -101,8 +93,8 @@
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
