--- a/Test/app.config
+++ b/Test/app.config
@@ -1,80 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_ICategoryService" openTimeout="10:00:00"
-                 closeTimeout="10:00:00"
-                 sendTimeout="10:00:00"
-                 receiveTimeout="10:00:00"
-                 maxReceivedMessageSize="2147483647"
-                 maxBufferPoolSize="2147483647"
-                 messageEncoding="Text">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        <binding name="WSHttpBinding_ICategoryService" openTimeout="10:00:00" closeTimeout="10:00:00" sendTimeout="10:00:00" receiveTimeout="10:00:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
         </binding>
-        <binding name="WSHttpBinding_IItemService" openTimeout="10:00:00"
-                 closeTimeout="10:00:00"
-                 sendTimeout="10:00:00"
-                 receiveTimeout="10:00:00"
-                 maxReceivedMessageSize="2147483647"
-                 maxBufferPoolSize="2147483647"
-                 messageEncoding="Text">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        <binding name="WSHttpBinding_IItemService" openTimeout="10:00:00" closeTimeout="10:00:00" sendTimeout="10:00:00" receiveTimeout="10:00:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
         </binding>
-        <binding name="WSHttpBinding_IRatingService" openTimeout="10:00:00"
-                 closeTimeout="10:00:00"
-                 sendTimeout="10:00:00"
-                 receiveTimeout="10:00:00"
-                 maxReceivedMessageSize="2147483647"
-                 maxBufferPoolSize="2147483647"
-                 messageEncoding="Text">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        <binding name="WSHttpBinding_IRatingService" openTimeout="10:00:00" closeTimeout="10:00:00" sendTimeout="10:00:00" receiveTimeout="10:00:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
         </binding>
-        <binding name="WSHttpBinding_IUserService" openTimeout="10:00:00"
-                 closeTimeout="10:00:00"
-                 sendTimeout="10:00:00"
-                 receiveTimeout="10:00:00"
-                 maxReceivedMessageSize="2147483647"
-                 maxBufferPoolSize="2147483647"
-                 messageEncoding="Text">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        <binding name="WSHttpBinding_IUserService" openTimeout="10:00:00" closeTimeout="10:00:00" sendTimeout="10:00:00" receiveTimeout="10:00:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
         </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICategoryService"
-                contract="CategoryProxy.ICategoryService" name="WSHttpBinding_ICategoryService">
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICategoryService" contract="CategoryProxy.ICategoryService" name="WSHttpBinding_ICategoryService">
         <identity>
-          <dns value="localhost" />
+          <dns value="localhost"/>
         </identity>
       </endpoint>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IItemService"
-                contract="ItemProxy.IItemService" name="WSHttpBinding_IItemService">
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IItemService" contract="ItemProxy.IItemService" name="WSHttpBinding_IItemService">
         <identity>
-          <dns value="localhost" />
+          <dns value="localhost"/>
         </identity>
       </endpoint>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IRatingService"
-                contract="RatingProxy.IRatingService" name="WSHttpBinding_IRatingService">
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IRatingService" contract="RatingProxy.IRatingService" name="WSHttpBinding_IRatingService">
         <identity>
-          <dns value="localhost" />
+          <dns value="localhost"/>
         </identity>
       </endpoint>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserService"
-                contract="UserProxy.IUserService" name="WSHttpBinding_IUserService">
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserService" contract="UserProxy.IUserService" name="WSHttpBinding_IUserService">
         <identity>
-          <dns value="localhost" />
+          <dns value="localhost"/>
         </identity>
       </endpoint>
     </client>
   </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" /></startup></configuration>
