--- a/Test/packages.config
+++ b/Test/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BCrypt.Net-Next" version="3.0.1" targetFramework="net471" />
+  <package id="BCrypt.Net-Next" version="3.0.1" targetFramework="net471" requireReinstallation="true" />
   <package id="Castle.Core" version="4.3.0" targetFramework="net471" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net471" />
   <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net471" />
